--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -15,7 +15,7 @@
   background: #222a;
   overflow-x: hidden;
   overflow-y: scroll;
-  z-index: 2;
+  z-index: 3;
 }
 
 .menu {
